--- a/index.html
+++ b/index.html
@@ -6,7 +6,29 @@
         <title>Calculator | TOP</title>
     </head>
     <body>
-        
+        <div class="calculator">
+            <div class="screen">
+                <span>54876</span>
+            </div>
+            <div class="buttons">
+                <button>Clear</button>
+                <button>0</button>
+                <button>1</button>
+                <button>2</button>
+                <button>3</button>
+                <button>4</button>
+                <button>5</button>
+                <button>6</button>
+                <button>7</button>
+                <button>8</button>
+                <button>9</button>
+                <button>+</button>
+                <button>-</button>
+                <button>x</button>
+                <button>÷</button>
+                <button>=</button>
+            </div>
+        </div>
         <script src="script.js"></script>
     </body>
 </html>
