--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
             </div>
             <div class="buttons">
                 <button>Clear</button>
-                <button>0</button>
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
-                <button>4</button>
-                <button>5</button>
-                <button>6</button>
-                <button>7</button>
-                <button>8</button>
-                <button>9</button>
+                <button class="digits" value="0">0</button>
+                <button class="digits" value="1">1</button>
+                <button class="digits" value="2">2</button>
+                <button class="digits" value="3">3</button>
+                <button class="digits" value="4">4</button>
+                <button class="digits" value="5">5</button>
+                <button class="digits" value="6">6</button>
+                <button class="digits" value="7">7</button>
+                <button class="digits" value="8">8</button>
+                <button class="digits" value="9">9</button>
                 <button>+</button>
                 <button>-</button>
                 <button>x</button>
