Display the pressed buttons

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     </head>
     <body>
         <div class="calculator">
-            <div class="screen">
-                <span>54876</span>
-            </div>
+            <div class="screen"></div>
             <div class="buttons">
                 <button>Clear</button>
                 <button class="digits" value="0">0</button>
